--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -9,12 +9,16 @@
     android:layout_margin="5dp">
 
     <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="wrap_content">
+        <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:id="@+id/collapsedRelLayout"    >
 
         <ImageView
-            android:layout_width="130dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="220dp"
             android:id="@+id/imgBook"
             android:src="@mipmap/ic_launcher"/>
 
@@ -29,6 +33,57 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="7dp"/>
 
+         <ImageView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:src="@drawable/ic_down_arrow"
+             android:layout_below="@+id/imgBook"
+             android:layout_marginTop="7dp"
+             android:id="@+id/btnDownArrow"
+             android:layout_alignParentEnd="true"/>
+
+
     </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/collapsedRelLayout"
+            android:id="@+id/expandedRelLayout"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Author"
+                android:id="@+id/authorText"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Duc Thai"
+                android:layout_below="@id/authorText"
+                android:id="@+id/authorName"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Short Description"
+                android:id="@+id/txtShortDesc"
+                android:layout_below="@id/authorName"
+                android:layout_marginTop="7dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_up_arrow"
+                android:layout_below="@id/txtShortDesc"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/btnUpArrow"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+
+
+
+
 
 </com.google.android.material.card.MaterialCardView>
