--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -53,7 +53,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Author"
+                android:text="Author: "
+                android:textStyle="bold"
                 android:id="@+id/authorText"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -66,9 +67,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Short Description"
+                android:textStyle="bold"
                 android:id="@+id/txtShortDesc"
                 android:layout_below="@id/authorName"
                 android:layout_marginTop="7dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:layout_below="@+id/txtShortDesc"
+                android:layout_toStartOf="@+id/btnUpArrow"
+                android:layout_marginEnd="7dp"
+                android:textColor="@color/purple_500"
+                android:id="@+id/btnDelete"/>
+
 
             <ImageView
                 android:layout_width="wrap_content"
